--- a/Administration/gsss.css
+++ b/Administration/gsss.css
@@ -646,7 +646,7 @@ background: linear-gradient(90deg, rgba(108,102,195,1) 3%, rgba(177,177,247,1) 5
 }
 
 table, th, td {
-  border: 2px solid black;
+  border: 1px solid black;
 padding: 5px;
 margin: 3px;
 width:device-width;
@@ -706,6 +706,7 @@ border:1px solid grey;
 background-color: #5F6BE0;
 font: white;
 font-size:15px;
+padding: 3px 5px;
 }
 
 better{width:99%;
@@ -718,6 +719,8 @@ font-size:15px;}
 
 
 p{font-size:13px;}
+
+h1{font-size:25px;}
 
 
 
